src/App.css
body {
  /* padding: 20px; */
}

.c-text-editor {
  position: relative;
  display: inline-block;
}

.c-text-editor__area {
  display: inline-block;
  vertical-align: top;
  padding: 5px;
  resize: none;
  word-wrap: normal;
  white-space: wrap;
  height: inherit;
  position: relative;
  word-break: unset;
  z-index: 2;
  background-color: transparent;
}

.c-text-editor__area__mirror {
  display: inline-block;
  position: absolute;
  padding: 5px;
  vertical-align: top;
  left: 0px;
  top: 0;
  word-wrap: normal;
  visibility: hidden;
}

.c-text-editor__area__mirror.highlight {
  border-color: transparent !important;
  visibility: visible;
  color: transparent;
  border: 0px;
}

.c-suggestions {
  position: absolute;
  background: white;
  border-radius: 4px;
  z-index: 3;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
  max-width: 180px;
  min-width: 100px;
  overflow: hidden;
  margin: 0;
  padding: 0;
}

.c-suggestions li a {
  text-decoration: none;
  margin: 0;
  padding: 10px;
  width: calc(100% - 20px);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: pointer;
  display: inline-block;
  color: black !important;
  outline: none;
  display: flex;
  /* justify-content: space-between; */
  align-items: center;
}

.c-suggestions li:hover,
.c-suggestions li a:focus {
  background-color: #eaeaea;
}

pre {
  margin: 0;
  font-size: 14px;
  font-family: sans-serif;
  white-space: pre-line;
}

.c-faux-indicator {
  display: inline-block;
}

.highlighted-tag {
  background-color: cadetblue;
  color: white;
  display: inline-block;
}

.c-suggestions__img {
  background-size: cover;
  background-position: center;
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  display: inline-block;
  border-radius: 100%;
  margin-right: 10px;
}

